syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.jal.crawler.proto.status";

import "configComponent.proto";


service RpcComponentStatus {
    rpc rpcComponentStatus (ComponentStatus) returns (ComponentStatus);
}

message ComponentStatus {
    ComponentType componentType = 4;
    Status component_status = 1;
    int32 taskNum = 2;
    map<string, TaskStatistics> tasks = 3;

}

message TaskStatistics{
    Status status=1;
    int32 resourceTotal=2;
    int32 processorTotal=3;
    int32 persistTotal=4;
    int64 startTime=5;
    int64 endTime=6;

}
enum ComponentType {
    DOWNLOAD = 0;
    RESOLVE = 1;
}

enum Status {
    NO_INIT = 0;
    INIT = 1;
    STARTED = 2;
    STOPPED = 3;
    FINISHED = 4;
    DESTROYED = 5;
}
